<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >
    

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detail_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mid_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"

                android:text="@string/tv_series_title"
                android:textColor="@color/white"
                android:textSize="@dimen/detail_title_size"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"

                android:text="@string/release_date"
                android:textColor="@color/white"
                android:textSize="@dimen/detail_title_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_summary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textColor="@color/white"
                android:textSize="@dimen/detail_title_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_summary_text"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textColor="@color/white"

                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_8sdp"
                android:src="@drawable/ic_baseline_share_24" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/detailShimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <include layout="@layout/similar_shimmer" />

                    <include layout="@layout/recommended_shimmer" />

                    <include layout="@layout/review_shimmer" />


                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <LinearLayout
                android:id="@+id/detailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">


                <TextView
                    android:id="@+id/detail_similiar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:text="@string/similiar_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/detail_title_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/detail_similiar_text_commingSoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coming_soon"
                    android:textColor="@color/white"
                    android:visibility="gone"

                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/detail_similiar_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:layout_marginBottom="8dp"

                    />

                <TextView
                    android:id="@+id/detail_recomendation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:text="@string/recomendation_movies"
                    android:textColor="@color/white"
                    android:textSize="@dimen/detail_title_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/detail_recomendation_text_commingSoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coming_soon"
                    android:textColor="@color/white"
                    android:visibility="gone"

                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/detail_recomendation_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:layout_marginBottom="8dp"

                    />

                <TextView
                    android:id="@+id/detail_review_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:text="@string/review"
                    android:textColor="@color/white"
                    android:textSize="@dimen/detail_title_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/detail_review_not_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/review_not_found"
                    android:textColor="@color/white"
                    android:visibility="gone"

                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/detail_review_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:layout_marginBottom="8dp"

                    />


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>