<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/homeShimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/popular_shimmer" />

                <include layout="@layout/top_rated_shimmer" />

                <include layout="@layout/now_playing_shimmer" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/layoutHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/mini_margin"
                android:fontFamily="@font/brush"
                android:text="@string/popular"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_font" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/popular_vp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="8dp"
                android:clipToPadding="false"
                android:overScrollMode="never"


                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="@dimen/mini_margin"
                    android:fontFamily="@font/brush"
                    android:text="@string/top_rated"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_font" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_rated"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="@dimen/mini_margin"
                    android:fontFamily="@font/brush"
                    android:text="@string/now_playing"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_font" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_now_playing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>